// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequirementViewNextRequirementConfiguration getNextRequirementConfigurationForAssessment returns NextRequirementButton with next requirement/test 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "className": undefined,
    "deps": {
      "assessmentViewUpdateHandler": [typemoq mock object],
      "dataTransferViewController": [typemoq mock object],
      "getAssessmentActionMessageCreator": [Function],
      "getProvider": [Function],
      "quickAssessRequirementKeys": [
        "test-requirement-key",
        "next-quick-assess-requirement-key",
      ],
    },
    "nextRequirement": {
      "key": "other-requirement-key",
    },
    "nextRequirementVisualizationType": 0,
  },
  "type": [Function],
}
`;

exports[`RequirementViewNextRequirementConfiguration getNextRequirementConfigurationForAssessment returns NextRequirementButton with null when last requirement in test 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "className": undefined,
    "deps": {
      "assessmentViewUpdateHandler": [typemoq mock object],
      "dataTransferViewController": [typemoq mock object],
      "getAssessmentActionMessageCreator": [Function],
      "getProvider": [Function],
      "quickAssessRequirementKeys": [
        "test-requirement-key",
        "next-quick-assess-requirement-key",
      ],
    },
    "nextRequirement": null,
    "nextRequirementVisualizationType": 0,
  },
  "type": [Function],
}
`;

exports[`RequirementViewNextRequirementConfiguration getNextRequirementConfigurationForQuickAssess returns Complete button when it is last requirement in quickAssessRequirementKeys 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "className": undefined,
    "data-automation-id": "complete-button",
    "onClick": [Function],
    "text": "Complete",
  },
  "type": [Function],
}
`;

exports[`RequirementViewNextRequirementConfiguration getNextRequirementConfigurationForQuickAssess returns NextRequirementButton with next requirement in quickAssessRequirementKeys 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "className": undefined,
    "deps": {
      "assessmentViewUpdateHandler": [typemoq mock object],
      "dataTransferViewController": [typemoq mock object],
      "getAssessmentActionMessageCreator": [Function],
      "getProvider": [Function],
      "quickAssessRequirementKeys": [
        "test-requirement-key",
        "next-quick-assess-requirement-key",
      ],
    },
    "nextRequirement": {
      "key": "next-quick-assess-requirement-key",
    },
    "nextRequirementVisualizationType": 32,
  },
  "type": [Function],
}
`;

exports[`RequirementViewNextRequirementConfiguration getNextRequirementConfigurationForQuickAssess returns next requirement in automated checks if currentAssessment is automated checks 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "className": undefined,
    "deps": {
      "assessmentViewUpdateHandler": [typemoq mock object],
      "dataTransferViewController": [typemoq mock object],
      "getAssessmentActionMessageCreator": [Function],
      "getProvider": [Function],
      "quickAssessRequirementKeys": [
        "test-requirement-key",
        "next-quick-assess-requirement-key",
      ],
    },
    "nextRequirement": {
      "key": "other-requirement-key",
    },
    "nextRequirementVisualizationType": 36,
  },
  "type": [Function],
}
`;
